--- a/frontend/contracts/styles.css
+++ b/frontend/contracts/styles.css
@@ -1,12 +1,22 @@
 .p-3,.text-bg-dark{
-    background-color:green !important;
+    background-color:whitesmoke !important;
     margin:0;
+}
+.d-flex{
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 header{
     margin:0px !important;
 }
+.logo-container{
+    width: 50px; 
+    height: 50px; 
+    margin-right: 20px;
+}
 .new-cont{
-    background-color: rgb(167, 193, 66)!important;
+    background-color: green !important;
     color:white;
     display:flex;
     padding:10px;
@@ -38,16 +48,13 @@ header{
 }
 .search-bar{
     width:50%;
-    /* padding:20px; */
-    margin-left:50px;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin-top:50px;
+    margin-left:25vw;
     height:50px;
     border:1px solid black
-}
-.navbar-custom {
-    background-color: #c0f06e;
-    padding: 50px;
-    border-right: 1px solid #dee2e6;
-    height: 100vh; /* Full height of the viewport */
 }
 .content-area {
     flex: 1;
@@ -88,3 +95,4 @@ header{
     align-items: center;
     justify-content: space-between;
 }
+
