--- a/frontend/contracts/styles.css
+++ b/frontend/contracts/styles.css
@@ -87,7 +87,7 @@ header{
     margin-left:100px;
     margin-right:200px;
     margin-top:50px;
-    background-color:#c0f06e;
+    /* background-color:#c0f06e; */
 }
 
 .contract-info {
