--- a/frontend/sachivalayam/styles.css
+++ b/frontend/sachivalayam/styles.css
@@ -1,3 +1,25 @@
+.page-background {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden; /* Ensure content doesn't overflow */
+}
+
+.page-background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(homebg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.8; /* Adjust the opacity as needed */
+    z-index: -1; /* Ensure the pseudo-element is behind the content */
+}
+
 .logo-container {
     width: 50px;
     height: 50px;
@@ -53,6 +75,30 @@
     transform: scale(1.2);
     fill: #d1d1d1;
 }
+
+.language-list {
+    position: absolute;
+    top: 60px; /* Moves it slightly down */
+    left: -20px; /* Moves it slightly to the left */
+    background-color: #343a40;
+    color: white;
+    list-style: none;
+    padding: 10px;
+    border-radius: 5px;
+    display: none; /* Hidden by default */
+    z-index: 1000;
+}
+
+.language-list li {
+    padding: 5px 15px;
+    cursor: pointer;
+}
+
+.language-list li:hover {
+    background-color: #495057;
+}
+
+
 
 /* Home page contents */
 .sachivalayam-home-contents {
@@ -226,5 +272,6 @@
 .notifications{
     margin-top: 100px;
     margin-left: 20px;
+    padding-top: 20px;
 }
 
