--- a/frontend/contracts/styles.css
+++ b/frontend/contracts/styles.css
@@ -105,7 +105,7 @@ header{
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 0.8fr);
     gap: 10px;
 }
 .contract-card {
@@ -113,10 +113,11 @@ header{
     padding: 40px;
     cursor: pointer;
     border-radius:8px;
-    margin-left:100px;
+    margin-left:25%;
     margin-right:200px;
     margin-top:50px;
-    background-color:#c0f06e;
+    background-color:green;
+    color:white;
 
 }
 .farmer-list {
