--- a/frontend/contracts/styles.css
+++ b/frontend/contracts/styles.css
@@ -110,15 +110,27 @@ header{
 }
 .contract-card {
     border: 1px solid #0b0b0b;
-    padding: 40px;
+    padding: 20px;
     cursor: pointer;
     border-radius:8px;
-    margin-left:25%;
-    margin-right:200px;
-    margin-top:50px;
-    background-color:green;
-    color:white;
-
+    margin-left:35%;
+    margin-right:50px;
+    margin-top:25px;
+    background-color:ivory;
+}
+.page-background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../sachivalayam/homebg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.8; /* Adjust the opacity as needed */
+    z-index: -1; /* Ensure the pseudo-element is behind the content */
 }
 .farmer-list {
     margin-top: 20px;
