--- a/frontend/contracts/styles.css
+++ b/frontend/contracts/styles.css
@@ -8,10 +8,11 @@
 
 .navbar {
     display:flex;
-    background-color: #212529;
+    background-color: #343a40 !important;
     padding: 15px;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); */
     height: 65px; /* Adjust based on logo height */
+    justify-content: space-between;
 }
 
 
@@ -45,11 +46,12 @@
 }
 
 .profile-icon {
+    display:flex;
     margin-left: 20px;  /* Adjust as needed */
 }
 
 .p-3,.text-bg-dark{
-    background-color:whitesmoke !important;
+    /* background-color:whitesmoke !important; */
     margin:0;
 }
 .d-flex{
